--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-#container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
 #header{
     background-color: lightcoral;
     height: 100px;
@@ -21,9 +16,10 @@
     width: 800px;
     margin-right: 60px;
 }
-#add-button{
+#button{
     width: 150px;
     font-size: x-large;
+    margin-right: 20px;
 }
 #heading{
     font-size: large;
