Change var into let and use class instead of id for styling and use camelcase

--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
-#header{
+.header{
     background-color: lightcoral;
     height: 100px;
     text-align: center;
     font-size: xx-large;
     margin-bottom: 20px;
 }
-#add-todo{
+.add-todo{
     padding-left: 100px;
 }
-#add-label{
+.add-label{
     font-size: xx-large;
 }
-#input-item{
+#inputItem{
     font-size: x-large;
     width: 800px;
     margin-right: 60px;
 }
-#button{
+.button{
     width: 150px;
     font-size: x-large;
     margin-right: 20px;
 }
-#heading{
+.heading{
     font-size: large;
     color: gray;
     padding-left: 100px;
